[tool.poetry]
name = "telegram-chatgpt"
version = "0.1.0"
description = ""
authors = ["edoardob90 <edoardob90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.2"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"
openai = "^0.27.2"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
